Add files to gitignore. Fill in correct values for ci

--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -4,6 +4,7 @@ on:
   push:
     branches:
       - main  # Set a branch to deploy
+      - gha-service-account
   pull_request:
 
 permissions:
@@ -33,14 +34,17 @@ jobs:
         name: 'Authenticate to Google Cloud'
         uses: 'google-github-actions/auth@v1'
         with:
-          workload_identity_provider: 'projects/143616246873/locations/global/workloadIdentityPools/<YOUR POOL HERE>/providers/<YOUR PROVIDER HERE>'
-          service_account: 'github-actions-service-account@<YOUR PROJECT ID>.iam.gserviceaccount.com' # UPDATE THIS TO YOUR SERVICE ACCOUNT
+          # workload_identity_provider: 'projects/143616246873/locations/global/workloadIdentityPools/<YOUR POOL HERE>/providers/<YOUR PROVIDER HERE>'
+          workload_identity_provider: 'projects/1058102022749/locations/global/workloadIdentityPools/github/providers/my-repo'
+          service_account: 'github-actions-service-account@cs1660-static-website-406721.iam.gserviceaccount.com' # UPDATE THIS TO YOUR SERVICE ACCOUNT
 
       # upload files to GCS
       - id: 'upload-static-files'
         uses: 'google-github-actions/upload-cloud-storage@v1'
         with:
-          path: 'public' # UPDATE THIS TO YOUR BUILD/FILES DIRECTORY
-          destination: 'storage-bucket-name' # UPDATE THIS TO YOUR BUCKET NAME
+          # path: 'public' # UPDATE THIS TO YOUR BUILD/FILES DIRECTORY
+          path: 'ZacharyHoffman_IceCreamDreams' # UPDATE THIS TO YOUR BUILD/FILES DIRECTORY
+          # destination: 'storage-bucket-name' # UPDATE THIS TO YOUR BUCKET NAME
+          destination: 'zfh1-static-website'
           parent: false
 
