--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,7 @@
 .idea
+
+# Ignore generated credentials from google-github-actions/auth
+gha-creds-*.json
+*.pem
+ZacharyHoffman_IceCreamDreams/**
+.DS_Store
